vendor/feedvalidator/demo/testcases/opml/errors/subscriptionListErrors3.opml
<?xml version="1.0" encoding="ISO-8859-1"?>

<!--
  Description:  Unknown attribute nonesuch
  Expect:       UnexpectedAttribute{attribute:nonesuch}
-->

<opml version="1.1">
	<head>
		<title>mySubscriptions.opml</title>
		<dateCreated>Sat, 18 Jun 2005 12:11:52 GMT</dateCreated>
		<dateModified>Tue, 02 Aug 2005 21:42:48 GMT</dateModified>
		<ownerName>Dave Winer</ownerName>
		<ownerEmail>dave@scripting.com</ownerEmail>
		<expansionState></expansionState>
		<vertScrollState>1</vertScrollState>
		<windowTop>61</windowTop>
		<windowLeft>304</windowLeft>
		<windowBottom>562</windowBottom>
		<windowRight>842</windowRight>
		</head>
	<body>
		<outline text="Feed 1" type="rss"/>
		<outline text="Feed 2" type="rss" version="notgood" xmlUrl="http://www.badopml.com/rss.xml"/>
		<outline text="Feed 3" type="rss" version="RSS1" xmlUrl="http://www.badopml.com/rss.xml" created="Tue, 12 Jul 2005 23:56:35 GMT"/>
		<outline text="Feed 4" type="rss" nonesuch="1" xmlUrl="http://www.badopml.com/rss.xml"/>
		<outline text="Feed 5" type="rss" xmlurl="http://www.badopml.com/rss.xml"/>
		</body>
	</opml>
